--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/home.css" />
-    <script src="/assets/scripts/card-cover-animation.js"></script>
+    <script src="/assets/scripts/script.js"></script>
     <title>Spider-Man | Multiverso</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
           <a href="#">Home</a>
         </li>
         <li class="s-menu__item">
-          <a href="pages/tobey-maguire/spider-man-1.html">Tobey Maguire</a>
+          <a href="/pages/tobey-maguire/spider-man-1.html">Tobey Maguire</a>
         </li>
         <li class="s-menu__item s-menu__icon">
           <img src="/assets/images/icons/spider.svg" alt="Spider" />
@@ -28,40 +28,78 @@
         </li>
       </ul>
     </nav>
+
     <div class="s-container">
-      <a href="#" class="s-card" id="spider-man-01">
-        <img class="s-card__background" src="/assets/images/pic-sm-bg-01.jpg" />
-        <img
-          class="s-card__image"
-          src="/assets/images/spider-man-01.png"
-          alt="Tobey Maguire"
-        />
-        <h2 class="s-card__title">Tobey Maguire</h2>
-      </a>
-      <a href="#" class="s-card" id="spider-man-02">
-        <img class="s-card__background" src="/assets/images/pic-sm-bg-02.jpg" />
-        <img
-          class="s-card__image"
-          src="/assets/images/spider-man-02.png"
-          alt="Tom Holland"
-        />
-        <h2 class="s-card__title">Tom Holland</h2>
-      </a>
-      <a href="#" class="s-card" id="spider-man-03">
-        <img class="s-card__background" src="/assets/images/pic-sm-bg-03.jpg" />
-        <img
-          class="s-card__image"
-          src="/assets/images/spider-man-03.png"
-          alt="Andrew Garfield"
-        />
-        <h2 class="s-card__title">Andrew Garfield</h2>
-      </a>
+      <div
+        class="s-card-carousel"
+        style="transform: translateZ(-40vw) rotateY(0deg)"
+      >
+        <a href="#" class="s-card" id="spider-man-01">
+          <img
+            class="s-card__background"
+            src="/assets/images/pic-sm-bg-01.jpg"
+          />
+          <img
+            class="s-card__image"
+            src="/assets/images/spider-man-01.png"
+            alt="Tobey Maguire"
+          />
+          <h2 class="s-card__title">Tobey Maguire</h2>
+        </a>
+
+        <a href="#" class="s-card" id="spider-man-02">
+          <img
+            class="s-card__background"
+            src="/assets/images/pic-sm-bg-02.jpg"
+          />
+          <img
+            class="s-card__image"
+            src="/assets/images/spider-man-02.png"
+            alt="Tom Holland"
+          />
+          <h2 class="s-card__title">Tom Holland</h2>
+        </a>
+
+        <a href="#" class="s-card" id="spider-man-03">
+          <img
+            class="s-card__background"
+            src="/assets/images/pic-sm-bg-03.jpg"
+          />
+          <img
+            class="s-card__image"
+            src="/assets/images/spider-man-03.png"
+            alt="Andrew Garfield"
+          />
+          <h2 class="s-card__title">Andrew Garfield</h2>
+        </a>
+      </div>
     </div>
 
     <div class="s-controller">
-      <div class="s-controller__button">01</div>
-      <div class="s-controller__button">02</div>
-      <div class="s-controller__button">03</div>
+      <div
+        id="1"
+        class="s-controller__button s-controller__button--active"
+        onclick="selectCarouselItem(this)"
+      >
+        01
+      </div>
+
+      <div
+        id="2"
+        class="s-controller__button"
+        onclick="selectCarouselItem(this)"
+      >
+        02
+      </div>
+
+      <div
+        id="3"
+        class="s-controller__button"
+        onclick="selectCarouselItem(this)"
+      >
+        03
+      </div>
+
       <div class="s-controller__line"></div>
     </div>
   </body>
