--- a/pages/tobey-maguire/spider-man-1.html
+++ b/pages/tobey-maguire/spider-man-1.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../assets/css/internal.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
+    />
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
     <div class="s-wrapper">
+      <video autoplay loop muted>
+        <source
+          src="/assets/videos/spiderman-2002-trailer.mp4"
+          type="video/mp4"
+        />
+      </video>
+
       <div class="s-left-column">
         <nav class="navigator">
           <div class="navigator__icon">
@@ -17,13 +28,94 @@
             </a>
           </div>
           <ul>
-            <li><a href="#01">01</a></li>
-            <li><a href="#02">02</a></li>
+            <li><a href="spider-man-1.html">01</a></li>
+            <li><a href="spider-man-2.html">02</a></li>
             <li><a href="#03">03</a></li>
           </ul>
         </nav>
       </div>
-      <div class="s-right-column"></div>
+
+      <div class="s-main-content">
+        <div class="s-main-content__top">
+          <div class="s-logo">
+            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+          </div>
+
+          <div class="s-description">
+            <div class="pills">
+              <ul>
+                <li>Ano: 2002</li>
+                <li>Diretor: Sam Raimi</li>
+              </ul>
+            </div>
+
+            <div class="s-description__text">
+              <p>
+                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
+                aranha geneticamente modificada em uma demonstração científica,
+                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
+                pretende usá-los para para ganhar dinheiro, adotando o nome de
+                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
+                presenciar o assassinando de seu tio Ben e sentir-se culpado,
+                Peter decide não mais usar seus poderes para proveito próprio e
+                sim para enfrentar o mal, tendo como seu primeiro grande desafio
+                o psicótico Duende Verde.
+              </p>
+            </div>
+          </div>
+
+          <div class="s-links">
+            <ul>
+              <li>
+                <a href="#" class="link-button" target="">
+                  <span class="icon">
+                    <div class="play-icon">&nbsp;</div>
+                  </span>
+                  <span class="label">Assistir Trailer</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="s-main-content__bottom">
+          <div class="gallery">
+            <ul>
+              <li>
+                <a
+                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    alt=""
+                /></a>
+              </li>
+
+              <li>
+                <a
+                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    alt=""
+                /></a>
+              </li>
+
+              <li>
+                <a
+                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
   </body>
 </html>
