add all internal pages

--- a/pages/tom-holland/spider-man-3.html
+++ b/pages/tom-holland/spider-man-3.html
@@ -15,7 +15,7 @@
     <div class="s-wrapper">
       <video autoplay loop muted>
         <source
-          src="/assets/videos/spiderman-2002-trailer.mp4"
+          src="/assets/videos/spiderman3-2021-trailer.mp4"
           type="video/mp4"
         />
       </video>
@@ -24,7 +24,7 @@
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
@@ -38,28 +38,22 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+            <img src="/assets/images/spiderman-tom/movie-03/logo.png" />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2021</li>
+                <li>Diretor: Jon Watts</li>
               </ul>
             </div>
 
             <div class="s-description__text">
               <p>
-                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse</strong>&nbsp;O Homem-Aranha precisa lidar com
+                as consequências da sua verdadeira identidade ter sido
+                descoberta.
               </p>
             </div>
           </div>
@@ -83,30 +77,30 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-03/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    src="/assets/images/spiderman-tom/movie-03/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-03/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    src="/assets/images/spiderman-tom/movie-03/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-03/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    src="/assets/images/spiderman-tom/movie-03/gallery/image-03.png"
                     alt=""
                 /></a>
               </li>
