--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="s-menu">
       <ul>
         <li class="s-menu__item">
-          <a href="#">Home</a>
+          <a href="/index.html">Home</a>
         </li>
         <li class="s-menu__item">
           <a href="/pages/tobey-maguire/spider-man-1.html">Tobey Maguire</a>
@@ -21,10 +21,10 @@
           <img src="/assets/images/icons/spider.svg" alt="Spider" />
         </li>
         <li class="s-menu__item">
-          <a href="#">Tom Holland</a>
+          <a href="/pages/tom-holland/spider-man-1.html">Tom Holland</a>
         </li>
         <li class="s-menu__item">
-          <a href="#">Andrew Garfield</a>
+          <a href="/pages/andrew-garfield/spider-man-1.html">Andrew Garfield</a>
         </li>
       </ul>
     </nav>
@@ -34,7 +34,11 @@
         class="s-card-carousel"
         style="transform: translateZ(-40vw) rotateY(0deg)"
       >
-        <a href="#" class="s-card" id="spider-man-01">
+        <a
+          href="/pages/tobey-maguire/spider-man-1.html"
+          class="s-card"
+          id="spider-man-01"
+        >
           <img
             class="s-card__background"
             src="/assets/images/pic-sm-bg-01.jpg"
@@ -47,7 +51,11 @@
           <h2 class="s-card__title">Tobey Maguire</h2>
         </a>
 
-        <a href="#" class="s-card" id="spider-man-02">
+        <a
+          href="/pages/tom-holland/spider-man-1.html"
+          class="s-card"
+          id="spider-man-02"
+        >
           <img
             class="s-card__background"
             src="/assets/images/pic-sm-bg-02.jpg"
@@ -60,7 +68,11 @@
           <h2 class="s-card__title">Tom Holland</h2>
         </a>
 
-        <a href="#" class="s-card" id="spider-man-03">
+        <a
+          href="/pages/andrew-garfield/spider-man-1.html"
+          class="s-card"
+          id="spider-man-03"
+        >
           <img
             class="s-card__background"
             src="/assets/images/pic-sm-bg-03.jpg"
