--- a/pages/andrew-garfield/spider-man-1.html
+++ b/pages/andrew-garfield/spider-man-1.html
@@ -15,7 +15,7 @@
     <div class="s-wrapper">
       <video autoplay loop muted>
         <source
-          src="/assets/videos/spiderman-2002-trailer.mp4"
+          src="/assets/videos/amazing-spiderman-2014-trailer.mp4"
           type="video/mp4"
         />
       </video>
@@ -24,13 +24,12 @@
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-andrew.png" />
             </a>
           </div>
           <ul>
             <li><a href="spider-man-1.html">01</a></li>
             <li><a href="spider-man-2.html">02</a></li>
-            <li><a href="spider-man-3.html">03</a></li>
           </ul>
         </nav>
       </div>
@@ -38,28 +37,24 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+            <img src="/assets/images/spiderman-andrew/movie-01/logo.png" />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2012</li>
+                <li>Diretor: Mark Webb</li>
               </ul>
             </div>
 
             <div class="s-description__text">
               <p>
-                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse</strong>&nbsp;Peter Parker está tentando saber
+                mais sobre sua origem. Ele encontra uma pasta que pertenceu ao
+                seu pai e quer descobrir por que seus pais desapareceram. Sua
+                busca o leva a Oscorp e ao dr. Curt Connors, que tem como
+                alterego o letal Lagarto.
               </p>
             </div>
           </div>
@@ -83,30 +78,30 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                     alt=""
                 /></a>
               </li>
