--- a/pages/tobey-maguire/spider-man-2.html
+++ b/pages/tobey-maguire/spider-man-2.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="spider-man-1.html">01</a></li>
             <li><a href="spider-man-2.html">02</a></li>
-            <li><a href="#03">03</a></li>
+            <li><a href="spider-man-3.html">03</a></li>
           </ul>
         </nav>
       </div>
@@ -38,28 +38,26 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+            <img src="/assets/images/spiderman-tobey/movie-02/logo.png" />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
+                <li>Ano: 2004</li>
                 <li>Diretor: Sam Raimi</li>
               </ul>
             </div>
 
             <div class="s-description__text">
               <p>
-                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse</strong>&nbsp;O Dr. Otto Octavius é transformado
+                em Doutor Octopus quando uma falha em uma experiência de fusão
+                nuclear resulta em uma explosão que mata sua esposa. Ele culpa o
+                Homem-Aranha pelo acidente e deseja vingança. Enquanto isso, o
+                alter ego do herói, Peter Parker, perde seus poderes. Para
+                complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e
+                sua amada fica noiva.
               </p>
             </div>
           </div>
@@ -83,30 +81,30 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    src="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    src="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    src="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
                     alt=""
                 /></a>
               </li>
