--- a/pages/tobey-maguire/spider-man-3.html
+++ b/pages/tobey-maguire/spider-man-3.html
@@ -15,7 +15,7 @@
     <div class="s-wrapper">
       <video autoplay loop muted>
         <source
-          src="/assets/videos/spiderman-2002-trailer.mp4"
+          src="/assets/videos/spiderman3-2007-trailer.mp4"
           type="video/mp4"
         />
       </video>
@@ -38,28 +38,26 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+            <img src="/assets/images/spiderman-tobey/movie-03/logo.png" />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
+                <li>Ano: 2007</li>
                 <li>Diretor: Sam Raimi</li>
               </ul>
             </div>
 
             <div class="s-description__text">
               <p>
-                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse</strong>&nbsp;O relacionamento entre Peter
+                Parker e Mary Jane parece estar dando certo, mas outros
+                problemas começam a surgir. A roupa de Homem-Aranha torna-se
+                preta e acaba controlando Peter - apesar de aumentar seus
+                poderes, ela revela e amplia o lado obscuro de sua
+                personalidade. Com isso, os vilões Venom e Homem-Areia tentam
+                destruir o herói.
               </p>
             </div>
           </div>
@@ -83,30 +81,30 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    src="/assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    src="/assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  href="/assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    src="/assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
                     alt=""
                 /></a>
               </li>
