--- a/pages/tom-holland/spider-man-1.html
+++ b/pages/tom-holland/spider-man-1.html
@@ -15,7 +15,7 @@
     <div class="s-wrapper">
       <video autoplay loop muted>
         <source
-          src="/assets/videos/spiderman-2002-trailer.mp4"
+          src="/assets/videos/spiderman-2017-trailer.mp4"
           type="video/mp4"
         />
       </video>
@@ -24,7 +24,7 @@
         <nav class="navigator">
           <div class="navigator__icon">
             <a href="../../index.html">
-              <img src="../../assets/images/icons/spiderman1.png" />
+              <img src="../../assets/images/icons/spiderman1-tom.png" />
             </a>
           </div>
           <ul>
@@ -38,28 +38,27 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+            <img src="/assets/images/spiderman-tom/movie-01/logo.png" />
           </div>
 
           <div class="s-description">
             <div class="pills">
               <ul>
-                <li>Ano: 2002</li>
-                <li>Diretor: Sam Raimi</li>
+                <li>Ano: 2017</li>
+                <li>Diretor: Jon Watts</li>
               </ul>
             </div>
 
             <div class="s-description__text">
               <p>
-                <strong>Sinopse</strong>&nbsp;Depois de ser picado por uma
-                aranha geneticamente modificada em uma demonstração científica,
-                o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele
-                pretende usá-los para para ganhar dinheiro, adotando o nome de
-                Homem-Aranha e se apresentando em lutas de exibição. Porém, ao
-                presenciar o assassinando de seu tio Ben e sentir-se culpado,
-                Peter decide não mais usar seus poderes para proveito próprio e
-                sim para enfrentar o mal, tendo como seu primeiro grande desafio
-                o psicótico Duende Verde.
+                <strong>Sinopse</strong>&nbsp;Depois de lutar ao lado dos
+                Vingadores, chegou a hora do jovem Peter Parker voltar para casa
+                em Nova York ao lado de sua tia May. Sob o olhar atento do
+                mentor Tony Stark, Peter começa a abraçar sua nova identidade
+                como Homem-Aranha e combate diariamente pequenos crimes nas
+                redondezas. Ele acredita que encontrou a missão de sua vida
+                quando o terrível vilão Abutre surge ameaçando a cidade. O
+                problema é que a tarefa não será tão fácil como ele imaginava.
               </p>
             </div>
           </div>
@@ -83,30 +82,40 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                    src="/assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                    src="/assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                  href="/assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                    src="/assets/images/spiderman-tom/movie-01/gallery/image-03.png"
+                    alt=""
+                /></a>
+              </li>
+
+              <li>
+                <a
+                  href="/assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tom/movie-01/gallery/image-04.png"
                     alt=""
                 /></a>
               </li>
