--- a/pages/tom-holland/spider-man-2.html
+++ b/pages/tom-holland/spider-man-2.html
@@ -80,6 +80,17 @@
             <ul>
               <li>
                 <a
+                  href="/assets/images/spiderman-tom/movie-02/background.png"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tom/movie-02/background.png"
+                    alt=""
+                    width="300"
+                /></a>
+              </li>
+
+              <li>
+                <a
                   href="/assets/images/spiderman-tom/movie-02/gallery/image-01.png"
                   data-fancybox
                   ><img
