--- a/pages/tom-holland/spider-man-3.html
+++ b/pages/tom-holland/spider-man-3.html
@@ -77,6 +77,17 @@
             <ul>
               <li>
                 <a
+                  href="/assets/images/spiderman-tom/movie-03/background.png"
+                  data-fancybox
+                  ><img
+                    src="/assets/images/spiderman-tom/movie-03/background.png"
+                    alt=""
+                    width="300"
+                /></a>
+              </li>
+
+              <li>
+                <a
                   href="/assets/images/spiderman-tom/movie-03/gallery/image-01.png"
                   data-fancybox
                   ><img
