add unique internal pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/tobey-maguire/spider-man-1.html">Tobey Maguire</a>
+          <a href="/pages/tobey-maguire/spider-man-all.html">Tobey Maguire</a>
         </li>
 
         <li class="s-menu__item s-menu__icon">
@@ -24,11 +24,13 @@
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/andrew-garfield/spider-man-1.html">Andrew Garfield</a>
+          <a href="/pages/andrew-garfield/spider-man-all.html"
+            >Andrew Garfield</a
+          >
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/tom-holland/spider-man-1.html">Tom Holland</a>
+          <a href="/pages/tom-holland/spider-man-all.html">Tom Holland</a>
         </li>
       </ul>
     </nav>
