--- a/pages/andrew-garfield/spider-man-1.html
+++ b/pages/andrew-garfield/spider-man-1.html
@@ -62,7 +62,11 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="#" class="link-button" target="">
+                <a
+                  href="http://www.youtube.com/watch?v=5cF7zXwahEE"
+                  class="link-button"
+                  target=""
+                >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
                   </span>
