--- a/pages/tobey-maguire/spider-man-1.html
+++ b/pages/tobey-maguire/spider-man-1.html
@@ -67,7 +67,11 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="#" class="link-button" target="">
+                <a
+                  href="http://www.youtube.com/watch?v=Jj-Y37XSUTw"
+                  class="link-button"
+                  target=""
+                >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
                   </span>
