--- a/pages/tobey-maguire/spider-man-3.html
+++ b/pages/tobey-maguire/spider-man-3.html
@@ -65,7 +65,11 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="#" class="link-button" target="">
+                <a
+                  href="http://www.youtube.com/watch?v=fDA-8r-NVWA"
+                  class="link-button"
+                  target=""
+                >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
                   </span>
