--- a/pages/tom-holland/spider-man-2.html
+++ b/pages/tom-holland/spider-man-2.html
@@ -64,7 +64,11 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="#" class="link-button" target="">
+                <a
+                  href="http://www.youtube.com/watch?v=Lfj5ewf4brA"
+                  class="link-button"
+                  target=""
+                >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
                   </span>
