--- a/pages/tom-holland/spider-man-3.html
+++ b/pages/tom-holland/spider-man-3.html
@@ -61,7 +61,11 @@
           <div class="s-links">
             <ul>
               <li>
-                <a href="#" class="link-button" target="">
+                <a
+                  href="http://www.youtube.com/watch?v=i6K7ZoxZ5GE"
+                  class="link-button"
+                  target=""
+                >
                   <span class="icon">
                     <div class="play-icon">&nbsp;</div>
                   </span>
