--- a/pages/andrew-garfield/spider-man-2.html
+++ b/pages/andrew-garfield/spider-man-2.html
@@ -29,7 +29,7 @@
           </div>
           <ul>
             <li><a href="spider-man-1.html">01</a></li>
-            <li><a href="spider-man-2.html">02</a></li>
+            <li><a class="active" href="spider-man-2.html">02</a></li>
           </ul>
         </nav>
       </div>
