--- a/pages/tom-holland/spider-man-3.html
+++ b/pages/tom-holland/spider-man-3.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="spider-man-1.html">01</a></li>
             <li><a href="spider-man-2.html">02</a></li>
-            <li><a href="spider-man-3.html">03</a></li>
+            <li><a class="active" href="spider-man-3.html">03</a></li>
           </ul>
         </nav>
       </div>
