add internal pages animation and small improvements

--- a/pages/andrew-garfield/spider-man-all.html
+++ b/pages/andrew-garfield/spider-man-all.html
@@ -9,11 +9,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
     />
+    <script src="/assets/scripts/internal-script.js"></script>
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
     <div class="s-wrapper">
-      <div id="page1" class="s-page-wrapper">
+      <div id="page1" class="s-page-wrapper s-spiderman-02-01">
         <div class="s-left-column">
           <nav class="navigator">
             <div class="navigator__icon">
@@ -23,51 +24,53 @@
             </div>
             <ul>
               <li><a class="active" href="#page1">01</a></li>
-              <li><a href="#page2">02</a></li>
+              <li><a href="javascript:changeFromPageToPage('1','2')">02</a></li>
             </ul>
           </nav>
         </div>
 
-        <div class="s-main-content s-spiderman-02-01">
+        <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
               <img src="/assets/images/spiderman-andrew/movie-01/logo.png" />
             </div>
 
-            <div class="s-description">
-              <div class="pills">
+            <div class="s-middle-content">
+              <div class="s-description">
+                <div class="pills">
+                  <ul>
+                    <li>Ano: 2012</li>
+                    <li>Diretor: Mark Webb</li>
+                  </ul>
+                </div>
+
+                <div class="s-description__text">
+                  <p>
+                    <strong>Sinopse</strong>&nbsp;Peter Parker está tentando
+                    saber mais sobre sua origem. Ele encontra uma pasta que
+                    pertenceu ao seu pai e quer descobrir por que seus pais
+                    desapareceram. Sua busca o leva a Oscorp e ao dr. Curt
+                    Connors, que tem como alterego o letal Lagarto.
+                  </p>
+                </div>
+              </div>
+
+              <div class="s-links">
                 <ul>
-                  <li>Ano: 2012</li>
-                  <li>Diretor: Mark Webb</li>
+                  <li>
+                    <a
+                      href="http://www.youtube.com/watch?v=5cF7zXwahEE"
+                      class="link-button"
+                      target=""
+                    >
+                      <span class="icon">
+                        <div class="play-icon">&nbsp;</div>
+                      </span>
+                      <span class="label">Assistir ao Trailer</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="s-description__text">
-                <p>
-                  <strong>Sinopse</strong>&nbsp;Peter Parker está tentando saber
-                  mais sobre sua origem. Ele encontra uma pasta que pertenceu ao
-                  seu pai e quer descobrir por que seus pais desapareceram. Sua
-                  busca o leva a Oscorp e ao dr. Curt Connors, que tem como
-                  alterego o letal Lagarto.
-                </p>
-              </div>
-            </div>
-
-            <div class="s-links">
-              <ul>
-                <li>
-                  <a
-                    href="http://www.youtube.com/watch?v=5cF7zXwahEE"
-                    class="link-button"
-                    target=""
-                  >
-                    <span class="icon">
-                      <div class="play-icon">&nbsp;</div>
-                    </span>
-                    <span class="label">Assistir Trailer</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
 
@@ -109,7 +112,7 @@
         </div>
       </div>
 
-      <div id="page2" class="s-page-wrapper">
+      <div id="page2" class="s-page-wrapper s-spiderman-02-02">
         <div class="s-left-column">
           <nav class="navigator">
             <div class="navigator__icon">
@@ -118,52 +121,54 @@
               </a>
             </div>
             <ul>
-              <li><a href="#page1">01</a></li>
+              <li><a href="javascript:changeFromPageToPage('2','1')">01</a></li>
               <li><a class="active" href="#page2">02</a></li>
             </ul>
           </nav>
         </div>
 
-        <div class="s-main-content s-spiderman-02-02">
+        <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
               <img src="/assets/images/spiderman-andrew/movie-02/logo.png" />
             </div>
 
-            <div class="s-description">
-              <div class="pills">
+            <div class="s-middle-content">
+              <div class="s-description">
+                <div class="pills">
+                  <ul>
+                    <li>Ano: 2014</li>
+                    <li>Diretor: Mark Webb</li>
+                  </ul>
+                </div>
+
+                <div class="s-description__text">
+                  <p>
+                    <strong>Sinopse</strong>&nbsp;O jovem Peter Parker está
+                    fascinado com as habilidades que adquiriu como Homem-Aranha.
+                    Agora, ele precisa lidar com dois problemas: o retorno de um
+                    velho amigo, Harry Osborn, e a chegada de um vilão mais
+                    forte e poderoso, Electro.
+                  </p>
+                </div>
+              </div>
+
+              <div class="s-links">
                 <ul>
-                  <li>Ano: 2014</li>
-                  <li>Diretor: Mark Webb</li>
+                  <li>
+                    <a
+                      href="http://www.youtube.com/watch?v=ezZSWTZldOc"
+                      class="link-button"
+                      target=""
+                    >
+                      <span class="icon">
+                        <div class="play-icon">&nbsp;</div>
+                      </span>
+                      <span class="label">Assistir ao Trailer</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="s-description__text">
-                <p>
-                  <strong>Sinopse</strong>&nbsp;O jovem Peter Parker está
-                  fascinado com as habilidades que adquiriu como Homem-Aranha.
-                  Agora, ele precisa lidar com dois problemas: o retorno de um
-                  velho amigo, Harry Osborn, e a chegada de um vilão mais forte
-                  e poderoso, Electro.
-                </p>
-              </div>
-            </div>
-
-            <div class="s-links">
-              <ul>
-                <li>
-                  <a
-                    href="http://www.youtube.com/watch?v=ezZSWTZldOc"
-                    class="link-button"
-                    target=""
-                  >
-                    <span class="icon">
-                      <div class="play-icon">&nbsp;</div>
-                    </span>
-                    <span class="label">Assistir Trailer</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
 
