--- a/pages/tom-holland/spider-man-all.html
+++ b/pages/tom-holland/spider-man-all.html
@@ -9,11 +9,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
     />
+    <script src="/assets/scripts/internal-script.js"></script>
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
     <div class="s-wrapper">
-      <div id="page1" class="s-page-wrapper">
+      <div id="page1" class="s-page-wrapper s-spiderman-03-01">
         <div class="s-left-column">
           <nav class="navigator">
             <div class="navigator__icon">
@@ -23,56 +24,58 @@
             </div>
             <ul>
               <li><a class="active" href="#page1">01</a></li>
-              <li><a href="#page2">02</a></li>
-              <li><a href="#page3">03</a></li>
+              <li><a href="javascript:changeFromPageToPage('1','2')">02</a></li>
+              <li><a href="javascript:changeFromPageToPage('1','3')">03</a></li>
             </ul>
           </nav>
         </div>
 
-        <div class="s-main-content s-spiderman-03-01">
+        <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
               <img src="/assets/images/spiderman-tom/movie-01/logo.png" />
             </div>
 
-            <div class="s-description">
-              <div class="pills">
+            <div class="s-middle-content">
+              <div class="s-description">
+                <div class="pills">
+                  <ul>
+                    <li>Ano: 2017</li>
+                    <li>Diretor: Jon Watts</li>
+                  </ul>
+                </div>
+
+                <div class="s-description__text">
+                  <p>
+                    <strong>Sinopse</strong>&nbsp;Depois de lutar ao lado dos
+                    Vingadores, chegou a hora do jovem Peter Parker voltar para
+                    casa em Nova York ao lado de sua tia May. Sob o olhar atento
+                    do mentor Tony Stark, Peter começa a abraçar sua nova
+                    identidade como Homem-Aranha e combate diariamente pequenos
+                    crimes nas redondezas. Ele acredita que encontrou a missão
+                    de sua vida quando o terrível vilão Abutre surge ameaçando a
+                    cidade. O problema é que a tarefa não será tão fácil como
+                    ele imaginava.
+                  </p>
+                </div>
+              </div>
+
+              <div class="s-links">
                 <ul>
-                  <li>Ano: 2017</li>
-                  <li>Diretor: Jon Watts</li>
+                  <li>
+                    <a
+                      href="http://www.youtube.com/watch?v=Y3A1Sk9ECkk"
+                      class="link-button"
+                      target=""
+                    >
+                      <span class="icon">
+                        <div class="play-icon">&nbsp;</div>
+                      </span>
+                      <span class="label">Assistir ao Trailer</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="s-description__text">
-                <p>
-                  <strong>Sinopse</strong>&nbsp;Depois de lutar ao lado dos
-                  Vingadores, chegou a hora do jovem Peter Parker voltar para
-                  casa em Nova York ao lado de sua tia May. Sob o olhar atento
-                  do mentor Tony Stark, Peter começa a abraçar sua nova
-                  identidade como Homem-Aranha e combate diariamente pequenos
-                  crimes nas redondezas. Ele acredita que encontrou a missão de
-                  sua vida quando o terrível vilão Abutre surge ameaçando a
-                  cidade. O problema é que a tarefa não será tão fácil como ele
-                  imaginava.
-                </p>
-              </div>
-            </div>
-
-            <div class="s-links">
-              <ul>
-                <li>
-                  <a
-                    href="http://www.youtube.com/watch?v=Y3A1Sk9ECkk"
-                    class="link-button"
-                    target=""
-                  >
-                    <span class="icon">
-                      <div class="play-icon">&nbsp;</div>
-                    </span>
-                    <span class="label">Assistir Trailer</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
 
@@ -124,7 +127,7 @@
         </div>
       </div>
 
-      <div id="page2" class="s-page-wrapper">
+      <div id="page2" class="s-page-wrapper s-spiderman-03-02">
         <div class="s-left-column">
           <nav class="navigator">
             <div class="navigator__icon">
@@ -133,55 +136,57 @@
               </a>
             </div>
             <ul>
-              <li><a href="#page1">01</a></li>
+              <li><a href="javascript:changeFromPageToPage('2','1')">01</a></li>
               <li><a class="active" href="#page2">02</a></li>
-              <li><a href="#page3">03</a></li>
+              <li><a href="javascript:changeFromPageToPage('2','3')">03</a></li>
             </ul>
           </nav>
         </div>
 
-        <div class="s-main-content s-spiderman-03-02">
+        <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
               <img src="/assets/images/spiderman-tom/movie-02/logo.png" />
             </div>
 
-            <div class="s-description">
-              <div class="pills">
+            <div class="s-middle-content">
+              <div class="s-description">
+                <div class="pills">
+                  <ul>
+                    <li>Ano: 2019</li>
+                    <li>Diretor: Jon Watts</li>
+                  </ul>
+                </div>
+
+                <div class="s-description__text">
+                  <p>
+                    <strong>Sinopse</strong>&nbsp;Peter Parker está em uma
+                    viagem de duas semanas pela Europa, ao lado de seus amigos
+                    de colégio, quando é surpreendido pela visita de Nick Fury.
+                    Convocado para mais uma missão heroica, ele precisa
+                    enfrentar vários vilões que surgem em cidades-símbolo do
+                    continente, como Londres, Paris e Veneza, e também a
+                    aparição do enigmático Mysterio.
+                  </p>
+                </div>
+              </div>
+
+              <div class="s-links">
                 <ul>
-                  <li>Ano: 2019</li>
-                  <li>Diretor: Jon Watts</li>
+                  <li>
+                    <a
+                      href="http://www.youtube.com/watch?v=Lfj5ewf4brA"
+                      class="link-button"
+                      target=""
+                    >
+                      <span class="icon">
+                        <div class="play-icon">&nbsp;</div>
+                      </span>
+                      <span class="label">Assistir ao Trailer</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="s-description__text">
-                <p>
-                  <strong>Sinopse</strong>&nbsp;Peter Parker está em uma viagem
-                  de duas semanas pela Europa, ao lado de seus amigos de
-                  colégio, quando é surpreendido pela visita de Nick Fury.
-                  Convocado para mais uma missão heroica, ele precisa enfrentar
-                  vários vilões que surgem em cidades-símbolo do continente,
-                  como Londres, Paris e Veneza, e também a aparição do
-                  enigmático Mysterio.
-                </p>
-              </div>
-            </div>
-
-            <div class="s-links">
-              <ul>
-                <li>
-                  <a
-                    href="http://www.youtube.com/watch?v=Lfj5ewf4brA"
-                    class="link-button"
-                    target=""
-                  >
-                    <span class="icon">
-                      <div class="play-icon">&nbsp;</div>
-                    </span>
-                    <span class="label">Assistir Trailer</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
 
@@ -234,7 +239,7 @@
         </div>
       </div>
 
-      <div id="page3" class="s-page-wrapper">
+      <div id="page3" class="s-page-wrapper s-spiderman-03-03">
         <div class="s-left-column">
           <nav class="navigator">
             <div class="navigator__icon">
@@ -243,51 +248,53 @@
               </a>
             </div>
             <ul>
-              <li><a href="#page1">01</a></li>
-              <li><a href="#page2">02</a></li>
+              <li><a href="javascript:changeFromPageToPage('3','1')">01</a></li>
+              <li><a href="javascript:changeFromPageToPage('3','2')">02</a></li>
               <li><a class="active" href="#page3">03</a></li>
             </ul>
           </nav>
         </div>
 
-        <div class="s-main-content s-spiderman-03-03">
+        <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
               <img src="/assets/images/spiderman-tom/movie-03/logo.png" />
             </div>
 
-            <div class="s-description">
-              <div class="pills">
+            <div class="s-middle-content">
+              <div class="s-description">
+                <div class="pills">
+                  <ul>
+                    <li>Ano: 2021</li>
+                    <li>Diretor: Jon Watts</li>
+                  </ul>
+                </div>
+
+                <div class="s-description__text">
+                  <p>
+                    <strong>Sinopse</strong>&nbsp;O Homem-Aranha precisa lidar
+                    com as consequências da sua verdadeira identidade ter sido
+                    descoberta.
+                  </p>
+                </div>
+              </div>
+
+              <div class="s-links">
                 <ul>
-                  <li>Ano: 2021</li>
-                  <li>Diretor: Jon Watts</li>
+                  <li>
+                    <a
+                      href="http://www.youtube.com/watch?v=i6K7ZoxZ5GE"
+                      class="link-button"
+                      target=""
+                    >
+                      <span class="icon">
+                        <div class="play-icon">&nbsp;</div>
+                      </span>
+                      <span class="label">Assistir ao Trailer</span>
+                    </a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="s-description__text">
-                <p>
-                  <strong>Sinopse</strong>&nbsp;O Homem-Aranha precisa lidar com
-                  as consequências da sua verdadeira identidade ter sido
-                  descoberta.
-                </p>
-              </div>
-            </div>
-
-            <div class="s-links">
-              <ul>
-                <li>
-                  <a
-                    href="http://www.youtube.com/watch?v=i6K7ZoxZ5GE"
-                    class="link-button"
-                    target=""
-                  >
-                    <span class="icon">
-                      <div class="play-icon">&nbsp;</div>
-                    </span>
-                    <span class="label">Assistir Trailer</span>
-                  </a>
-                </li>
-              </ul>
             </div>
           </div>
 
