--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/home.css" />
-    <script src="/assets/scripts/home-script.js"></script>
+    <link rel="stylesheet" href="./assets/css/home.css" />
+    <script src="./assets/scripts/home-script.js"></script>
     <title>Spider-Man | Multiverso</title>
   </head>
   <body>
     <nav class="s-menu">
       <ul>
         <li class="s-menu__item">
-          <a href="/index.html">Home</a>
+          <a href="./index.html">Home</a>
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/tobey-maguire/spider-man-all.html">Tobey Maguire</a>
+          <a href="./pages/tobey-maguire/spider-man-all.html">Tobey Maguire</a>
         </li>
 
         <li class="s-menu__item s-menu__icon">
-          <img src="/assets/images/icons/spider.svg" alt="Spider" />
+          <img src="./assets/images/icons/spider.svg" alt="Spider" />
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/andrew-garfield/spider-man-all.html"
+          <a href="./pages/andrew-garfield/spider-man-all.html"
             >Andrew Garfield</a
           >
         </li>
 
         <li class="s-menu__item">
-          <a href="/pages/tom-holland/spider-man-all.html">Tom Holland</a>
+          <a href="./pages/tom-holland/spider-man-all.html">Tom Holland</a>
         </li>
       </ul>
     </nav>
@@ -41,51 +41,51 @@
         style="transform: translateZ(-40vw) rotateY(0deg)"
       >
         <a
-          href="/pages/tobey-maguire/spider-man-1.html"
+          href="./pages/tobey-maguire/spider-man-1.html"
           class="s-card"
           id="spider-man-01"
         >
           <img
             class="s-card__background"
-            src="/assets/images/pic-sm-bg-01.jpg"
+            src="./assets/images/pic-sm-bg-01.jpg"
           />
           <img
             class="s-card__image"
-            src="/assets/images/spider-man-01.png"
+            src="./assets/images/spider-man-01.png"
             alt="Tobey Maguire"
           />
           <h2 class="s-card__title">Tobey Maguire</h2>
         </a>
 
         <a
-          href="/pages/andrew-garfield/spider-man-1.html"
+          href="./pages/andrew-garfield/spider-man-1.html"
           class="s-card"
           id="spider-man-03"
         >
           <img
             class="s-card__background"
-            src="/assets/images/pic-sm-bg-03.jpg"
+            src="./assets/images/pic-sm-bg-03.jpg"
           />
           <img
             class="s-card__image"
-            src="/assets/images/spider-man-03.png"
+            src="./assets/images/spider-man-03.png"
             alt="Andrew Garfield"
           />
           <h2 class="s-card__title">Andrew Garfield</h2>
         </a>
 
         <a
-          href="/pages/tom-holland/spider-man-1.html"
+          href="./pages/tom-holland/spider-man-1.html"
           class="s-card"
           id="spider-man-02"
         >
           <img
             class="s-card__background"
-            src="/assets/images/pic-sm-bg-02.jpg"
+            src="./assets/images/pic-sm-bg-02.jpg"
           />
           <img
             class="s-card__image"
-            src="/assets/images/spider-man-02.png"
+            src="./assets/images/spider-man-02.png"
             alt="Tom Holland"
           />
           <h2 class="s-card__title">Tom Holland</h2>
