--- a/pages/andrew-garfield/spider-man-1.html
+++ b/pages/andrew-garfield/spider-man-1.html
@@ -15,7 +15,7 @@
     <div class="s-wrapper">
       <video autoplay loop muted>
         <source
-          src="/assets/videos/amazing-spiderman-2014-trailer.mp4"
+          src="../../assets/videos/amazing-spiderman-2014-trailer.mp4"
           type="video/mp4"
         />
       </video>
@@ -37,7 +37,7 @@
       <div class="s-main-content">
         <div class="s-main-content__top">
           <div class="s-logo">
-            <img src="/assets/images/spiderman-andrew/movie-01/logo.png" />
+            <img src="../../assets/images/spiderman-andrew/movie-01/logo.png" />
           </div>
 
           <div class="s-description">
@@ -82,30 +82,30 @@
             <ul>
               <li>
                 <a
-                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
+                  href="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
+                    src="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
+                  href="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
+                    src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                     alt=""
                 /></a>
               </li>
 
               <li>
                 <a
-                  href="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
+                  href="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                   data-fancybox
                   ><img
-                    src="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
+                    src="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                     alt=""
                 /></a>
               </li>
