--- a/pages/andrew-garfield/spider-man-all.html
+++ b/pages/andrew-garfield/spider-man-all.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
     />
-    <script src="/assets/scripts/internal-script.js"></script>
+    <script src="../../assets/scripts/internal-script.js"></script>
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
@@ -32,7 +32,9 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-andrew/movie-01/logo.png" />
+              <img
+                src="../../assets/images/spiderman-andrew/movie-01/logo.png"
+              />
             </div>
 
             <div class="s-middle-content">
@@ -79,30 +81,30 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
+                    href="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
+                      src="../../assets/images/spiderman-andrew/movie-01/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
+                    href="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
+                      src="../../assets/images/spiderman-andrew/movie-01/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
+                    href="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
+                      src="../../assets/images/spiderman-andrew/movie-01/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
@@ -130,7 +132,9 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-andrew/movie-02/logo.png" />
+              <img
+                src="../../assets/images/spiderman-andrew/movie-02/logo.png"
+              />
             </div>
 
             <div class="s-middle-content">
@@ -177,30 +181,30 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-02/gallery/image-01.png"
+                    href="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-02/gallery/image-01.png"
+                      src="../../assets/images/spiderman-andrew/movie-02/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-02/gallery/image-02.png"
+                    href="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-02/gallery/image-02.png"
+                      src="../../assets/images/spiderman-andrew/movie-02/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-andrew/movie-02/gallery/image-03.png"
+                    href="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-andrew/movie-02/gallery/image-03.png"
+                      src="../../assets/images/spiderman-andrew/movie-02/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
