--- a/pages/tobey-maguire/spider-man-all.html
+++ b/pages/tobey-maguire/spider-man-all.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
     />
-    <script src="/assets/scripts/internal-script.js"></script>
+    <script src="../../assets/scripts/internal-script.js"></script>
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
@@ -33,7 +33,9 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tobey/movie-01/logo.png" />
+              <img
+                src="../../assets/images/spiderman-tobey/movie-01/logo.png"
+              />
             </div>
 
             <div class="s-middle-content">
@@ -85,30 +87,30 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
+                    href="../../assets/images/spiderman-tobey/movie-01/gallery/image-01-full.jpg"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tobey/movie-01/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
+                    href="../../assets/images/spiderman-tobey/movie-01/gallery/image-02-full.jpg"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tobey/movie-01/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
+                    href="../../assets/images/spiderman-tobey/movie-01/gallery/image-03-full.jpg"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tobey/movie-01/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
@@ -137,7 +139,9 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tobey/movie-02/logo.png" />
+              <img
+                src="../../assets/images/spiderman-tobey/movie-02/logo.png"
+              />
             </div>
 
             <div class="s-middle-content">
@@ -186,30 +190,30 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
+                    href="../../assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tobey/movie-02/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
+                    href="../../assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tobey/movie-02/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
+                    href="../../assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tobey/movie-02/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
@@ -238,7 +242,9 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tobey/movie-03/logo.png" />
+              <img
+                src="../../assets/images/spiderman-tobey/movie-03/logo.png"
+              />
             </div>
 
             <div class="s-middle-content">
@@ -287,30 +293,30 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
+                    href="../../assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tobey/movie-03/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
+                    href="../../assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tobey/movie-03/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
+                    href="../../assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tobey/movie-03/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
