--- a/pages/tom-holland/spider-man-all.html
+++ b/pages/tom-holland/spider-man-all.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
     />
-    <script src="/assets/scripts/internal-script.js"></script>
+    <script src="../../assets/scripts/internal-script.js"></script>
     <title>Multiverso | Spider-Man</title>
   </head>
   <body>
@@ -33,7 +33,7 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tom/movie-01/logo.png" />
+              <img src="../../assets/images/spiderman-tom/movie-01/logo.png" />
             </div>
 
             <div class="s-middle-content">
@@ -84,40 +84,40 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-01/gallery/image-01.png"
+                    href="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-01/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tom/movie-01/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-01/gallery/image-02.png"
+                    href="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-01/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tom/movie-01/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-01/gallery/image-03.png"
+                    href="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-01/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tom/movie-01/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                    href="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-01/gallery/image-04.png"
+                      src="../../assets/images/spiderman-tom/movie-01/gallery/image-04.png"
                       alt=""
                   /></a>
                 </li>
@@ -146,7 +146,7 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tom/movie-02/logo.png" />
+              <img src="../../assets/images/spiderman-tom/movie-02/logo.png" />
             </div>
 
             <div class="s-middle-content">
@@ -195,10 +195,10 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-02/background.png"
+                    href="../../assets/images/spiderman-tom/movie-02/background.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-02/background.png"
+                      src="../../assets/images/spiderman-tom/movie-02/background.png"
                       alt=""
                       width="300"
                   /></a>
@@ -206,30 +206,30 @@
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-02/gallery/image-01.png"
+                    href="../../assets/images/spiderman-tom/movie-02/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-02/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tom/movie-02/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-02/gallery/image-02.png"
+                    href="../../assets/images/spiderman-tom/movie-02/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-02/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tom/movie-02/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-02/gallery/image-03.png"
+                    href="../../assets/images/spiderman-tom/movie-02/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-02/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tom/movie-02/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
@@ -258,7 +258,7 @@
         <div class="s-main-content">
           <div class="s-main-content__top">
             <div class="s-logo">
-              <img src="/assets/images/spiderman-tom/movie-03/logo.png" />
+              <img src="../../assets/images/spiderman-tom/movie-03/logo.png" />
             </div>
 
             <div class="s-middle-content">
@@ -303,10 +303,10 @@
               <ul>
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-03/background.png"
+                    href="../../assets/images/spiderman-tom/movie-03/background.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-03/background.png"
+                      src="../../assets/images/spiderman-tom/movie-03/background.png"
                       alt=""
                       width="300"
                   /></a>
@@ -314,30 +314,30 @@
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-03/gallery/image-01.png"
+                    href="../../assets/images/spiderman-tom/movie-03/gallery/image-01.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-03/gallery/image-01.png"
+                      src="../../assets/images/spiderman-tom/movie-03/gallery/image-01.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-03/gallery/image-02.png"
+                    href="../../assets/images/spiderman-tom/movie-03/gallery/image-02.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-03/gallery/image-02.png"
+                      src="../../assets/images/spiderman-tom/movie-03/gallery/image-02.png"
                       alt=""
                   /></a>
                 </li>
 
                 <li>
                   <a
-                    href="/assets/images/spiderman-tom/movie-03/gallery/image-03.png"
+                    href="../../assets/images/spiderman-tom/movie-03/gallery/image-03.png"
                     data-fancybox
                     ><img
-                      src="/assets/images/spiderman-tom/movie-03/gallery/image-03.png"
+                      src="../../assets/images/spiderman-tom/movie-03/gallery/image-03.png"
                       alt=""
                   /></a>
                 </li>
