--- a/pages/andrew-garfield/spider-man-1.html
+++ b/pages/andrew-garfield/spider-man-1.html
@@ -30,6 +30,7 @@
           <ul>
             <li><a class="active" href="spider-man-1.html">01</a></li>
             <li><a href="spider-man-2.html">02</a></li>
+            <li><a href="spider-man-all.html" title="Todos sem vídeo">T</a></li>
           </ul>
         </nav>
       </div>
