--- a/pages/tom-holland/spider-man-1.html
+++ b/pages/tom-holland/spider-man-1.html
@@ -31,6 +31,7 @@
             <li><a class="active" href="spider-man-1.html">01</a></li>
             <li><a href="spider-man-2.html">02</a></li>
             <li><a href="spider-man-3.html">03</a></li>
+            <li><a href="spider-man-all.html" title="Todos sem vídeo">T</a></li>
           </ul>
         </nav>
       </div>
