add responsiveness in home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="./index.html">Home</a>
         </li>
 
-        <li class="s-menu__item">
+        <li class="s-menu__item s-nemu__item--lt-hidden">
           <a href="./pages/tobey-maguire/spider-man-all.html">Tobey Maguire</a>
         </li>
 
@@ -23,13 +23,28 @@
           <img src="./assets/images/icons/spider.svg" alt="Spider" />
         </li>
 
-        <li class="s-menu__item">
+        <li class="s-menu__item s-nemu__item--lt-hidden">
           <a href="./pages/andrew-garfield/spider-man-all.html"
             >Andrew Garfield</a
           >
         </li>
 
-        <li class="s-menu__item">
+        <li class="s-menu__item s-nemu__item--lt-hidden">
+          <a href="./pages/tom-holland/spider-man-all.html">Tom Holland</a>
+        </li>
+      </ul>
+      <ul>
+        <li class="s-menu__item s-nemu__item--gt-hidden">
+          <a href="./pages/tobey-maguire/spider-man-all.html">Tobey Maguire</a>
+        </li>
+
+        <li class="s-menu__item s-nemu__item--gt-hidden">
+          <a href="./pages/andrew-garfield/spider-man-all.html"
+            >Andrew Garfield</a
+          >
+        </li>
+
+        <li class="s-menu__item s-nemu__item--gt-hidden">
           <a href="./pages/tom-holland/spider-man-all.html">Tom Holland</a>
         </li>
       </ul>
